--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -1,45 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragment/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>Users</title>
-    <link href="/webjars/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <title> Users</title>
 </head>
 <body>
+<div th:replace="~{fragment/navbar :: navbarFragment}"></div>
 
-    <div class="container col-md-8-offset3 col-md-8 mt-lg-5">
-        <div th:switch="${users}">
-            <h2 th:case="null">There are no users to display</h2>
-            <div th:case="*">
-                <h2>All Users</h2>
-                <table class="table table-bordered table-hover">
-                    <thead>
-                    <tr>
-                        <th scope="col">First Name</th>
-                        <th scope="col">Last Name</th>
-                        <th scope="col">Email</th>
-                        <th colspan="2">Actions</th>
-                    </tr>
-                    </thead>
+<div class="container col-md-8-offset3 col-md-8 mt-lg-5">
+    <div th:switch="${users}">
+        <h2 th:case="null">There are no users to display</h2>
+        <div th:case="*">
+            <h2>All Users</h2>
+            <table class="table table-bordered table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Last Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">isEnabled</th>
+                    <th scope="col">Role</th>
+                    <th colspan="2">Actions</th>
+                </tr>
+                </thead>
 
-                    <tbody>
-                    <tr th:each="user : ${users}">
-                        <td th:text="${user.firstname}"></td>
-                        <td th:text="${user.lastname}"></td>
-                        <td th:text="${user.email}"></td>
-                        <td><a href="#">Edit</a></td>
-                        <td><a href="#">Delete</a></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+                <tbody>
+                <tr th:each="user : ${users}">
+                    <td th:text="${user.firstname}"></td>
+                    <td th:text="${user.lastname}"></td>
+                    <td th:text="${user.email}"></td>
+                    <td th:text="${user.isEnabled}"></td>
+                    <td>
+                        <div th:each="role: ${user.roleNames}">
+                            <span th:text="${role}"></span>
+                        </div>
+                    </td>
+                    <td><a href="#" th:href="@{/users/edit/{id}(id=${user.id})}" class="btn btn-info">Edit</a></td>
+                    <td><a th:href="@{/users/delete/{id}(id=${user.id})}" class="btn btn-danger">Delete</a></td>
+                </tr>
+                </tbody>
+            </table>
         </div>
-
-        <p>
-            <a th:href="@{/registration}">Add a new User</a>
-        </p>
-
     </div>
 
+    <p>
+        <a th:href="@{/registration}">Add a new User</a>
+    </p>
+
+</div>
+
+
+
+<div th:replace="~{fragment/footer :: footerFragment}"></div>
 </body>
 </html>
